fixed text align

--- a/src/index.css
+++ b/src/index.css
@@ -47,9 +47,9 @@ mark {
   color: pink;
   position: relative;
   text-align: center;
-  margin: auto;
+  
   padding: 10px;
-  margin:10px 40px;
+  margin:10px 0px;
   
   border-color: rgba(0, 0, 0, 0.3);
   -webkit-border-radius: 5px;
